# rust-toolbox

./: .gitignore  .openclawrc.json  AGENTS.md  Cargo.toml  LICENSE.txt  OCFLPLAN.md  OCFL_PLAN.md  PLAN_OBJECT_VERSIONING.md  PLAN_OCFL.md  README.md  REFACTORINGPLAN.md  tarpaulin-report.html
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
docs/: ocfl_lib.md  ocfl_lib_add_object.md  ocfl_lib_get_object.md  ocfl_lib_list_objects.md  ocfl_lib_repo_init.md
notes/: 000.md  010.md  011.md  012.md
tools/fetch-it/: Cargo.toml
tools/fetch-it/src/: main.rs
tools/ocfl_bdd/: Cargo.toml
tools/ocfl_bdd/tests/features/: object_creation.feature  object_deletion.feature  object_listing.feature  object_repository.feature  object_retrieval.feature  object_versioning.feature  ocfl_api.feature
tools/ocfl_bdd/tests/steps/: given_steps.rs  mod.rs  then_steps.rs  when_steps.rs
tools/ocfl_cli/: Cargo.toml
tools/ocfl_cli/src/: main.rs
tools/ocfl_endpoint/: Cargo.toml
tools/ocfl_endpoint/src/: lib.rs  main.rs
tools/ocfl_lib/: Cargo.toml
tools/ocfl_lib/src/: lib.rs
tools/ocfl_local_bdd/: Cargo.toml  build.rs
tools/ocfl_local_bdd/tests/: bdd.rs
tools/ocfl_local_bdd/tests/features/: object_creation.feature  object_deletion.feature  object_listing.feature  object_repository.feature  object_retrieval.feature  object_versioning.feature
tools/ocfl_local_bdd/tests/steps/: given_steps.rs  mod.rs  then_steps.rs  when_steps.rs
tools/ocfl_local_cli/: Cargo.toml
tools/ocfl_local_cli/src/: main.rs
tools/ocfl_remote_bdd/: Cargo.toml
tools/ocfl_remote_bdd/tests/: bdd.rs  world.rs
tools/ocfl_remote_bdd/tests/features/: object_deletion.feature  object_listing.feature  object_repository.feature  object_retrieval.feature
tools/ocfl_remote_bdd/tests/steps/: given_steps.rs  when_steps.rs
tools/ocfl_remote_cli/: Cargo.toml
tools/ocfl_remote_cli/src/: main.rs
