[workspace]
resolver = "2"
members = ["tools/*"]

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.38", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
axum = "0.7"
serde = { version = "1", features = ["derive"] }