[workspace]
resolver = "2"
members = ["tools/*"]
default-members = ["tools/ocfl_lib", "tools/ocfl_endpoint", "tools/ocfl_cli", "tools/starter", "tools/fetch-it"]

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.38", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
tempfile = "3"
cucumber = "0.22"