[workspace]
resolver = "2"
members = [
    "tools/fetch-it",
    "tools/ocfl_endpoint",
    "tools/ocfl_lib",
    "tools/ocfl_local_bdd",
    "tools/ocfl_local_cli",
    "tools/ocfl_remote_bdd",
    "tools/ocfl_remote_cli"
]
default-members = ["tools/ocfl_lib", "tools/ocfl_endpoint", "tools/ocfl_local_cli", "tools/ocfl_remote_cli", "tools/fetch-it"]

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.38", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
cucumber = "0.22"