[package]
name = "ocfl_bdd"
version = "0.1.0"
edition = "2024"
publish = false

[dev-dependencies]
cucumber      = { workspace = true }
tokio         = { workspace = true }
reqwest       = { workspace = true }
serde         = { workspace = true }
serde_json    = "1"
anyhow        = { workspace = true }
tempfile      = { workspace = true }
axum          = { workspace = true }
ocfl_endpoint = { path = "../ocfl_endpoint" }

[[test]]
name = "bdd"
harness = false
