[package]
name = "ocfl_endpoint"
version = "0.1.0"
edition = "2024"

[lib]
name = "ocfl_endpoint"
path = "src/lib.rs"

[[bin]]
name = "ocfl_endpoint"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
ocfl_lib = { path = "../ocfl_lib" }
serde_json = "1.0"
