[package]
name = "ocfl_local_bdd"
version = "0.1.0"
edition = "2024"

[dependencies]
cucumber = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
ocfl_lib = { path = "../ocfl_lib" }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

