[package]
name = "ocfl_local_bdd"
version = "0.1.0"
edition = "2024"
publish = false

[dev-dependencies]
cucumber   = { workspace = true }
tokio      = { workspace = true }
anyhow     = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
tempfile   = { workspace = true }

[[test]]
name = "bdd"
harness = false
