[package]
name = "ocfl_remote_bdd"
version = "0.1.0"
edition = "2024"

[dependencies]
cucumber = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

